# openenv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  client.py  env.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
clip_quality_env/: agent.py  client.py  difficulty.py  grader.py  icl_memory.py  real_clips.py  rubric.py  train.py
data/: seed_gt.json
graders/: easy.py  grader.py  hard.py
hf_space/: .gitignore  Dockerfile  README.md  __init__.py  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_extractor.txt  spaces_app.py
hf_space/.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
hf_space/.git_backup/logs/: HEAD
hf_space/.git_backup/logs/refs/heads/: main
hf_space/.git_backup/logs/refs/remotes/origin/: HEAD  main
hf_space/.git_backup/objects/pack/: pack-f21e92882fc04565dffe42db53ccbea80d36a530.idx  pack-f21e92882fc04565dffe42db53ccbea80d36a530.pack  pack-f21e92882fc04565dffe42db53ccbea80d36a530.rev
hf_space/.git_backup/refs/heads/: main  master
hf_space/.git_backup/refs/remotes/origin/: main
hf_space/clip_quality_env/: __init__.py  env.py  generator.py  ground_truth.py  models.py
hf_space/data/: real_clips_manifest.jsonl
hf_space/graders/: easy.py  extra.py  grader.py  hard.py  medium.py
hf_space/server/: Dockerfile  __init__.py  app.py  baseline_runs.py  clip_quality_environment.py  grader.py
hf_space/tasks/: easy.py  extra.py  medium.py
hf_space/tests/: test_baseline_runs.py  test_grader.py  test_models.py
scripts/: extract_mp4_metadata.py
server/: app.py  environment.py  requirements.txt
server/tasks/: __init__.py
tasks/: easy.py  extra.py  hard.py  medium.py
tests/: test_environment.py  test_inference.py  test_server_routes.py
