[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-incident-env"
version = "1.0.0"
description = "A high-stakes RL environment for Cloud Reliability Engineering (CRE) simulation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Meta OpenEnv Contributor" }
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.setuptools]
packages = ["tasks", "graders"]
py-modules = ["env", "app", "inference"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.py"]
