[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-incident-env"
version = "1.0.0"
description = "A high-stakes RL environment for Cloud Reliability Engineering (CRE) simulation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Meta OpenEnv Contributor" }
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "openai>=1.0.0",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:start"

[tool.setuptools]
packages = ["tasks", "graders", "server"]
py-modules = ["env", "inference"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.py"]
